fix: white space under navbar + align checked to dos button

--- a/app/assets/stylesheets/components/_application.scss
+++ b/app/assets/stylesheets/components/_application.scss
@@ -3,7 +3,7 @@
 }
 
 body { 
-    padding: 70px 0px 0px 0px;
+    padding: 69px 0px 0px 0px;
     height: 100vh;
     margin-bottom: 0;
 }
