--- a/app/assets/stylesheets/pages/_flats_show.scss
+++ b/app/assets/stylesheets/pages/_flats_show.scss
@@ -327,3 +327,7 @@ input.form-control {
   cursor: pointer;
   color: $blue;
 }
+
+.checked-belonging {
+  margin-top: 33px;
+}
